--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="client.js"></script>
 </head>
 <body>
-
+    <div id="app"></div>
+    <script src="client.js"></script>
 </body>
 </html>
